- Fixed behaviour of Exotic weapons to prevent them from from using the first exotic skill found.
- Exposed the selection of AI programs to the main RequirementsMet method. Prevents issues with programs not being translated, offends me slightly less. Fixes #3350

Data Changes:
- Fixed incorrect underbarrel weapon name for the Nissan Optimum II that caused a crash. Fixes part of #3344
- Fixed incorrect bonus for the Delphi Paragon to apply to Threading actions instead of Compiling.
- Set the ammo type for the FN-AAL to Gyrojet. Possibly not correct, as there's no proper RAW on what ammo the weapon is supposed to fire. 

Build 204

Application Changes:

- Fixed an issue where certain controls (e.g. Skills, Knowledge Skills) would not get their children controls translated. Fixes #3171.
- Fixed an issue where drag-and-dropping weapons in career mode, as well as drag-and-dropping gear under certain circumstances, would not work. Fixes #3172.
- Added an option to the dice roller tool where a roll glitches if there are more 1's than hits rather than more 1's than half of the character's dicepool.
- Fixed a regression when purchasing Cyberware in Career mode in which it would not properly deduct from Essence Holes first. Fixes #3188
- Fixes an issue with the calculation of lifestyle multipliers. Should fix #2639, fixes an issue with trolls not stacking correctly.
- Fixed an issue with martial art techniques not being able to be refunded properly if removed. Fixes #3196
- Fixed page offset changes not properly being stored.
- Fixed a regression with exotic skills not picking up improvements. Fixes #3204
- Fixed issues with objects not moving correctly when dragged between locations. Fixes #3079
- Allowed gear to use forbidden and required nodes similar to those that can be used by qualities, cyberware, metamagics, and others.
- Implemented most content from Better Than Bad, with exception of life modules and the Hard Luck quality.