@@ -2382,7 +2382,7 @@
       <ess>0.4</ess>
       <capacity>0</capacity>
       <avail>10</avail>
-      <cost>75000</cost>
+      <cost>73000</cost>
       <forcegrade>None</forcegrade>
       <bonus>
         <dodge>2</dodge>
